# franky

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: apps.json  archlinux.rs  main.rs  osx.rs  ubuntu.rs  windows.rs
