[package]
name = "franky"
version = "0.1.0"
authors = ["Rupa Ghimire <rupaghimire14@gmail.com>", "Suraj Ghimire <suraj@ghishadow.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
indicatif = "0.14.0"
